[workspace]

# members = [
#     "lisk",
# ]

[package]
name = "lisk"
version = "0.1.0"
edition = "2021"
authors = ["ozeraleaddin @gmail.com",
            "sh@shnoq.com"
            ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blize-mero"

[dependencies]
piston = "0.53.1"
pistoncore-glutin_window = "0.71.0"
