[workspace]

# members = [
#     "lisk",
# ]

[package]
name = "lisk"
version = "0.1.0"
edition = "2021"
authors = ["ozeraleaddin @gmail.com",
            "sh@shnoq.com"
            ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "blize-mero"
# path = "src/blize-mero.rs"

[dependencies]
piston = "0.53.1"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
pistoncore-glutin_window = "0.71.0"
